--- a/STM32SensorStation.ioc
+++ b/STM32SensorStation.ioc
@@ -22,7 +22,17 @@ Dma.I2C1_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=I2C1_RX
 Dma.Request1=I2C1_TX
-Dma.RequestsNb=2
+Dma.Request2=SPI2_TX
+Dma.RequestsNb=3
+Dma.SPI2_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI2_TX.2.Instance=DMA1_Channel5
+Dma.SPI2_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_TX.2.Mode=DMA_NORMAL
+Dma.SPI2_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 I2C1.IPParameters=Timing
 I2C1.Timing=0x00909BEB
@@ -33,32 +43,39 @@ Mcu.IP0=DMA
 Mcu.IP1=I2C1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP4=SPI2
+Mcu.IP5=SYS
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PB3 (JTDO-TRACESWO)
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
-Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=PB12
+Mcu.Pin13=PA13 (JTMS-SWDIO)
+Mcu.Pin14=PA14 (JTCK-SWCLK)
+Mcu.Pin15=PB3 (JTDO-TRACESWO)
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA13 (JTMS-SWDIO)
-Mcu.Pin9=PA14 (JTCK-SWCLK)
-Mcu.PinsNb=14
+Mcu.Pin5=PC3
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PB2
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:2\:0\:true\:false\:true\:true\:false\:false
+NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel6_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel7_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:2\:0\:true\:false\:true\:true\:false\:false
@@ -104,6 +121,20 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PB10.Mode=Simplex_Bidirectional_Master
+PB10.Signal=SPI2_SCK
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=DC
+PB11.Locked=true
+PB11.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=CS
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=RST
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO-TRACESWO).GPIO_Label=SWO
 PB3\ (JTDO-TRACESWO).Locked=true
@@ -124,6 +155,8 @@ PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
+PC3.Mode=Simplex_Bidirectional_Master
+PC3.Signal=SPI2_MOSI
 PH0-OSC_IN\ (PH0).Locked=true
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Locked=true
@@ -159,7 +192,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_DMA_Init-DMA-false-LL-true,4-MX_USART2_UART_Init-USART2-false-LL-true,5-MX_I2C1_Init-I2C1-false-LL-true,6-MX_TIM2_Init-TIM2-false-LL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_DMA_Init-DMA-false-LL-true,4-MX_USART2_UART_Init-USART2-false-LL-true,5-MX_I2C1_Init-I2C1-false-LL-true,6-MX_SPI2_Init-SPI2-false-LL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -216,6 +249,13 @@ RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.VCOSAI2OutputFreq_Value=128000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI2.CalculateBaudRate=10.0 MBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
+SPI2.Direction=SPI_DIRECTION_1LINE
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
