--- a/STM32SensorStation.ioc
+++ b/STM32SensorStation.ioc
@@ -34,6 +34,7 @@ Dma.SPI2_TX.2.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI2_TX.2.Priority=DMA_PRIORITY_LOW
 Dma.SPI2_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
 I2C1.Timing=0x00909BEB
 KeepUserPlacement=false
@@ -43,51 +44,66 @@ Mcu.IP0=DMA
 Mcu.IP1=I2C1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
-Mcu.IP4=SPI2
-Mcu.IP5=SYS
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP4=RTC
+Mcu.IP5=SPI2
+Mcu.IP6=SYS
+Mcu.IP7=TIM6
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC13
-Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PB10
-Mcu.Pin11=PB11
-Mcu.Pin12=PB12
+Mcu.Pin0=PC14-OSC32_IN (PC14)
+Mcu.Pin1=PC15-OSC32_OUT (PC15)
+Mcu.Pin10=PB11
+Mcu.Pin11=PB12
+Mcu.Pin12=PA11
 Mcu.Pin13=PA13 (JTMS-SWDIO)
 Mcu.Pin14=PA14 (JTCK-SWCLK)
-Mcu.Pin15=PB3 (JTDO-TRACESWO)
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin3=PH0-OSC_IN (PH0)
-Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin5=PC3
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA5
-Mcu.Pin9=PB2
-Mcu.PinsNb=19
+Mcu.Pin15=PC10
+Mcu.Pin16=PC12
+Mcu.Pin17=PB3 (JTDO-TRACESWO)
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
+Mcu.Pin2=PH0-OSC_IN (PH0)
+Mcu.Pin20=VP_RTC_VS_RTC_Activate
+Mcu.Pin21=VP_RTC_VS_RTC_Calendar
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin3=PH1-OSC_OUT (PH1)
+Mcu.Pin4=PC3
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA5
+Mcu.Pin8=PB2
+Mcu.Pin9=PB10
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
-NVIC.BusFault_IRQn=true\:2\:0\:true\:false\:true\:true\:false\:false
-NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel6_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel7_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
-NVIC.DebugMonitor_IRQn=true\:2\:0\:true\:false\:true\:true\:false\:false
+NVIC.BusFault_IRQn=true\:4\:0\:true\:false\:true\:true\:false\:false
+NVIC.DMA1_Channel5_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel6_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel7_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:4\:0\:true\:false\:true\:true\:false\:false
+NVIC.EXTI15_10_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:2\:0\:true\:false\:true\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:4\:0\:true\:false\:true\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.PendSV_IRQn=true\:2\:0\:true\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:4\:0\:true\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:2\:0\:true\:false\:true\:false\:false\:false
+NVIC.SVCall_IRQn=true\:4\:0\:true\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
-NVIC.UsageFault_IRQn=true\:2\:0\:true\:false\:true\:true\:false\:false
+NVIC.TIM6_DAC_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:4\:0\:true\:false\:true\:true\:false\:false
+PA11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA11.GPIO_Label=BUTTON1
+PA11.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA11.GPIO_PuPd=GPIO_PULLUP
+PA11.Locked=true
+PA11.Signal=GPXTI11
 PA13\ (JTMS-SWDIO).GPIOParameters=GPIO_Label
 PA13\ (JTMS-SWDIO).GPIO_Label=TMS
 PA13\ (JTMS-SWDIO).Locked=true
@@ -143,12 +159,18 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PC13.GPIO_Label=B1 [Blue PushButton]
-PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PC13.GPIO_PuPd=GPIO_NOPULL
-PC13.Locked=true
-PC13.Signal=GPXTI13
+PC10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC10.GPIO_Label=BUTTON2
+PC10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC10.GPIO_PuPd=GPIO_PULLUP
+PC10.Locked=true
+PC10.Signal=GPXTI10
+PC12.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC12.GPIO_Label=BUTTON0
+PC12.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC12.GPIO_PuPd=GPIO_PULLUP
+PC12.Locked=true
+PC12.Signal=GPXTI12
 PC14-OSC32_IN\ (PC14).Locked=true
 PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
@@ -192,7 +214,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_DMA_Init-DMA-false-LL-true,4-MX_USART2_UART_Init-USART2-false-LL-true,5-MX_I2C1_Init-I2C1-false-LL-true,6-MX_SPI2_Init-SPI2-false-LL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_DMA_Init-DMA-false-LL-true,4-MX_USART2_UART_Init-USART2-false-LL-true,5-MX_I2C1_Init-I2C1-false-LL-true,6-MX_SPI2_Init-SPI2-false-LL-true,7-MX_RTC_Init-RTC-false-LL-true,8-MX_TIM6_Init-TIM6-false-LL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -210,7 +232,8 @@ RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=40000000
 RCC.I2C2Freq_Value=40000000
 RCC.I2C3Freq_Value=40000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PLLSourceVirtual,PREFETCH_ENABLE,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PLLSourceVirtual,PREFETCH_ENABLE,PWRFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.LCDFreq_Value=32768
 RCC.LPTIM1Freq_Value=40000000
 RCC.LPTIM2Freq_Value=40000000
 RCC.LPUART1Freq_Value=40000000
@@ -231,6 +254,8 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSI
 RCC.PREFETCH_ENABLE=1
 RCC.PWRFreq_Value=80000000
 RCC.RNGFreq_Value=64000000
+RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
+RCC.RTCFreq_Value=32768
 RCC.SAI1Freq_Value=18285714.285714287
 RCC.SAI2Freq_Value=18285714.285714287
 RCC.SDMMCFreq_Value=64000000
@@ -247,8 +272,12 @@ RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=160000000
 RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.VCOSAI2OutputFreq_Value=128000000
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI2.CalculateBaudRate=10.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
@@ -256,10 +285,20 @@ SPI2.Direction=SPI_DIRECTION_1LINE
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+TIM6.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
+TIM6.Period=499
+TIM6.Prescaler=7999
+TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=NUCLEO-L476RG
 boardIOC=true
 isbadioc=false
